Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
6.3.0
-
None
-
-
03782af2dd (qt/qtbase/dev) 2ed72fd528 (qt/qtbase/6.3) 2ed72fd528 (qt/tqtc-qtbase/6.3) 03782af2dd (qt/tqtc-qtbase/dev) 6ce828481c (qt/tqtc-qtbase/6.2)
Description
It previously did not even pass configure, but since that was fix, the build still fails with the following errors:
[1576/3328] Linking CXX shared library qtbase\bin\Qt6Gui.dll FAILED: qtbase/bin/Qt6Gui.dll qtbase/lib/Qt6Gui.lib cmd.exe /C "cd . && "C:\Program Files\CMake\bin\cmake.exe" -E vs_link_dll --intdir=qtbase\src\gui\CMakeFiles\Gui.dir\Release --rc=C:\PROGRA~2\WI3CF2~1\10\bin\100203~1.0\x64\rc.exe --mt=C:\PROGRA~2\WI3CF2~1\10\bin\100203~1.0\x64\mt.exe --manifests -- C:\PROGRA~2\MICROS~2\2019\COMMUN~1\VC\Tools\MSVC\1429~1.301\bin\Hostx64\x64\link.exe /nologo @CMakeFiles\Gui.Release.rsp /out:qtbase\bin\Qt6Gui.dll /implib:qtbase\lib\Qt6Gui.lib /pdb:qtbase\bin\Qt6Gui.pdb /dll /version:6.3 /machine:x64 /INCREMENTAL:NO -DYNAMICBASE -NXCOMPAT -LARGEADDRESSAWARE -OPT:REF -OPT:ICF -GUARD:CF && cd ." LINK: command "C:\PROGRA~2\MICROS~2\2019\COMMUN~1\VC\Tools\MSVC\1429~1.301\bin\Hostx64\x64\link.exe /nologo @CMakeFiles\Gui.Release.rsp /out:qtbase\bin\Qt6Gui.dll /implib:qtbase\lib\Qt6Gui.lib /pdb:qtbase\bin\Qt6Gui.pdb /dll /version:6.3 /machine:x64 /INCREMENTAL:NO -DYNAMICBASE -NXCOMPAT -LARGEADDRESSAWARE -OPT:REF -OPT:ICF -GUARD:CF /MANIFEST /MANIFESTFILE:qtbase\bin\Qt6Gui.dll.manifest" failed (exit code 1120) with the following output: Creating library qtbase\lib\Qt6Gui.lib and object qtbase\lib\Qt6Gui.exp qwindowsfontdatabase.cpp.obj : error LNK2001: unresolved external symbol "public: virtual void __cdecl QFreeTypeFontDatabase::populateFontDatabase(void)" (?populateFontDatabase@QFreeTypeFontDatabase@@UEAAXXZ) qwindowsfontdatabase.cpp.obj : error LNK2001: unresolved external symbol "public: virtual class QFontEngine * __cdecl QFreeTypeFontDatabase::fontEngine(struct QFontDef const &,void *)" (?fontEngine@QFreeTypeFontDatabase@@UEAAPEAVQFontEngine@@AEBUQFontDef@@PEAX@Z) qwindowsfontdatabase.cpp.obj : error LNK2001: unresolved external symbol "public: virtual class QFontEngine * __cdecl QFreeTypeFontDatabase::fontEngine(class QByteArray const &,double,enum QFont::HintingPreference)" (?fontEngine@QFreeTypeFontDatabase@@UEAAPEAVQFontEngine@@AEBVQByteArray@@NW4HintingPreference@QFont@@@Z) qwindowsfontdatabase.cpp.obj : error LNK2001: unresolved external symbol "public: virtual class QList<class QString> __cdecl QFreeTypeFontDatabase::addApplicationFont(class QByteArray const &,class QString const &,struct QFontDatabasePrivate::ApplicationFont *)" (?addApplicationFont@QFreeTypeFontDatabase@@UEAA?AV?$QList@VQString@@@@AEBVQByteArray@@AEBVQString@@PEAUApplicationFont@QFontDatabasePrivate@@@Z) qwindowsfontdatabase.cpp.obj : error LNK2001: unresolved external symbol "public: virtual void __cdecl QFreeTypeFontDatabase::releaseHandle(void *)" (?releaseHandle@QFreeTypeFontDatabase@@UEAAXPEAX@Z) qwindowsfontdatabase.cpp.obj : error LNK2001: unresolved external symbol "public: virtual void __cdecl QWindowsFontDatabaseFT::populateFontDatabase(void)" (?populateFontDatabase@QWindowsFontDatabaseFT@@UEAAXXZ) qwindowsfontdatabase.cpp.obj : error LNK2001: unresolved external symbol "public: virtual void __cdecl QWindowsFontDatabaseFT::populateFamily(class QString const &)" (?populateFamily@QWindowsFontDatabaseFT@@UEAAXAEBVQString@@@Z) qwindowsfontdatabase.cpp.obj : error LNK2001: unresolved external symbol "public: virtual class QFontEngine * __cdecl QWindowsFontDatabaseFT::fontEngine(struct QFontDef const &,void *)" (?fontEngine@QWindowsFontDatabaseFT@@UEAAPEAVQFontEngine@@AEBUQFontDef@@PEAX@Z) qwindowsfontdatabase.cpp.obj : error LNK2001: unresolved external symbol "public: virtual class QFontEngine * __cdecl QWindowsFontDatabaseFT::fontEngine(class QByteArray const &,double,enum QFont::HintingPreference)" (?fontEngine@QWindowsFontDatabaseFT@@UEAAPEAVQFontEngine@@AEBVQByteArray@@NW4HintingPreference@QFont@@@Z) qwindowsfontdatabase.cpp.obj : error LNK2001: unresolved external symbol "public: virtual class QList<class QString> __cdecl QWindowsFontDatabaseFT::fallbacksForFamily(class QString const &,enum QFont::Style,enum QFont::StyleHint,enum QChar::Script)const " (?fallbacksForFamily@QWindowsFontDatabaseFT@@UEBA?AV?$QList@VQString@@@@AEBVQString@@W4Style@QFont@@W4StyleHint@5@W4Script@QChar@@@Z) qwindowsfontdatabase.cpp.obj : error LNK2001: unresolved external symbol "public: virtual class QString __cdecl QWindowsFontDatabaseFT::fontDir(void)const " (?fontDir@QWindowsFontDatabaseFT@@UEBA?AVQString@@XZ) qwindowsfontdatabase.cpp.obj : error LNK2001: unresolved external symbol "public: virtual class QFont __cdecl QWindowsFontDatabaseFT::defaultFont(void)const " (?defaultFont@QWindowsFontDatabaseFT@@UEBA?AVQFont@@XZ) qtbase\bin\Qt6Gui.dll : fatal error LNK1120: 12 unresolved externals [1593/3328] Building CXX object qtbase\src\gui\CMakeFiles\Gui.dir\Debug\Gui_autogen\mocs_compilation_Debug.cpp.obj ninja: build stopped: subcommand failed.
Attachments
Issue Links
- resulted from
-
QTBUG-103245 Configure fails when specifying -no-freetype
- Closed